--- a/packages/components/src/FormatTime/FormatTime.mdx
+++ b/packages/components/src/FormatTime/FormatTime.mdx
@@ -28,6 +28,12 @@ import { FormatTime } from "@jobber/components/FormatTime";
   <FormatTime time={new CivilTime(18, 35)} />
 </Playground>
 
+## Props
+
+<Props of={FormatTime} />
+
+---
+
 ## Specify Format
 
 <Playground>
@@ -39,7 +45,3 @@ import { FormatTime } from "@jobber/components/FormatTime";
   -
   <FormatTime time={new CivilTime(18, 35)} use24HourClock={false} />
 </Playground>
-
-## FormatTime Properties
-
-<Props of={FormatTime} />
