--- a/packages/components/src/InlineLabel/InlineLabel.mdx
+++ b/packages/components/src/InlineLabel/InlineLabel.mdx
@@ -15,9 +15,19 @@ import { InlineLabel } from ".";
 Inline labels are typically used to indicate state/status on objects within the
 application.
 
+```ts
+import { InlineLabel } from "@jobber/components/InlineLabel";
+```
+
 <Playground>
   <InlineLabel>Draft</InlineLabel>
 </Playground>
+
+## Props
+
+<Props of={InlineLabel} />
+
+---
 
 ## Sizes
 
@@ -36,10 +46,6 @@ application.
     99+
   </InlineLabel>
 </Playground>
-
-## Properties
-
-<Props of={InlineLabel} />
 
 ## Colours
 
