--- a/packages/components/src/InputValidation/InputValidation.mdx
+++ b/packages/components/src/InputValidation/InputValidation.mdx
@@ -15,7 +15,12 @@ import { useState } from "react";
 
 <ComponentStatus stage="ready" responsive="yes" accessible="yes" />
 
-This component allows you to show the validation messages outside of the inputs.
+`InputValidation` allows you to show the validation messages separate from a
+particular input component.
+
+```ts
+import { InputValidation } from "@jobber/components/InputValidation";
+```
 
 <Playground>
   {() => {
@@ -51,6 +56,8 @@ This component allows you to show the validation messages outside of the inputs.
 
 </Playground>
 
-## InputValidation Properties
+## Props
 
 <Props of={InputValidation} />
+
+---
