--- a/packages/components/src/Markdown/Markdown.mdx
+++ b/packages/components/src/Markdown/Markdown.mdx
@@ -16,15 +16,21 @@ Markdown component is a text-to-HTML conversion tool with a twist! Because,
 instead of using semantic HTML tags, it uses our own atlantis component for
 paragraph, bold, italic, and heading.
 
+```ts
+import { Markdown } from "@jobber/components/Markdown";
+```
+
 <Playground>
   <Markdown
     content={`### Bananas
 
-    Bananas are **yellow** on the outside and **white** on the inside. It's also full of nutrients, _but thats just boring stuff_. At this point, I'll just ask you to [google it](https://lmgtfy.com/?q=types+of+bananas).`}
+    Bananas are **yellow** on the outside and **white** on the inside. They're also full of nutrients, _but thats just boring stuff_. At this point, I'll just ask you to [google it](https://lmgtfy.com/?q=types+of+bananas).`}
     externalLink={true} />
 
 </Playground>
 
-## Markdown Properties
+## Props
 
 <Props of={Markdown} />
+
+---
