--- a/packages/components/src/Modal/Modal.mdx
+++ b/packages/components/src/Modal/Modal.mdx
@@ -21,6 +21,10 @@ Modals are overlays that allow users to view, edit, or show informations that
 doesn't require a page to be built. It also prevent users from interacting with
 the rest of the application until a specific action is taken.
 
+```ts
+import { Modal } from "@jobber/components/Modal";
+```
+
 <Playground>
   {() => {
     const [value, setValue] = useState(false);
@@ -48,6 +52,12 @@ the rest of the application until a specific action is taken.
 }}
 
 </Playground>
+
+## Props
+
+<Props of={Modal} />
+
+---
 
 ## With actions
 
@@ -99,7 +109,3 @@ You have 3 action props you can use
 }}
 
 </Playground>
-
-## Modal Properties
-
-<Props of={Modal} />
