--- a/packages/components/src/Page/Page.mdx
+++ b/packages/components/src/Page/Page.mdx
@@ -15,6 +15,10 @@ import { Text } from "../Text";
 
 Use to build the title and descriptions part of the page.
 
+```ts
+import { Page } from "@jobber/components/Page";
+```
+
 <Playground>
   <Page
     title="Notifications"
@@ -24,6 +28,8 @@ Use to build the title and descriptions part of the page.
   </Page>
 </Playground>
 
-## Page Properties
+## Props
 
 <Props of={Page} />
+
+---
