--- a/packages/components/src/Tabs/Tabs.mdx
+++ b/packages/components/src/Tabs/Tabs.mdx
@@ -36,6 +36,8 @@ import { Tabs, Tab } from "@jobber/components/Tabs";
   </Tabs>
 </Playground>
 
-## Tab Properties
+## Tab Props
 
 <Props of={Tab} />
+
+---
