--- a/packages/components/src/Text/Text.mdx
+++ b/packages/components/src/Text/Text.mdx
@@ -12,6 +12,23 @@ import { Text } from ".";
 
 Text is used to add an additional visual meaning on your content
 
+```ts
+import { Text } from "@jobber/components/Text";
+```
+
+<Playground>
+  <Text>
+    "640K is more memory than anyone will ever need on a computer" – Not Bill
+    Gates
+  </Text>
+</Playground>
+
+## Props
+
+<Props of={Text} />
+
+---
+
 ## Default
 
 Use this as the body text
@@ -52,7 +69,3 @@ only be used right after a page title.
     Drag to rearrange the order that fields show up in Jobber
   </Text>
 </Playground>
-
-## Text Properties
-
-<Props of={Text} />
