--- a/plop/templates/component/{{name}}.mdx
+++ b/plop/templates/component/{{name}}.mdx
@@ -28,11 +28,16 @@ import { {{ name }} } from "@jobber/components/{{ name }}";
 
 ---
 
-# Usage
+<!--
+  It is not necessary to provide an example of each prop. Use usage examples to
+  highlight key features of a component or particular considerations.
+
+  See `Button.mdx` for a good example of this.
+-->
 
 ## Loud
 
-Write a short description about `loud` prop.
+Use `loud` to indicate that a component is yelling.
 
 <Playground>
   <{{ name }} text="Fred" loud={true} />
