--- a/packages/components/src/DescriptionList/DescriptionList.mdx
+++ b/packages/components/src/DescriptionList/DescriptionList.mdx
@@ -14,12 +14,16 @@ import { DescriptionList } from ".";
 
 Description Lists are used to display a list of terms and descriptions.
 
-## Basic Usage
+```ts
+import { DescriptionList } from "@jobber/components/DescriptionList";
+```
 
 <Playground>
   <DescriptionList data={[["Issued", "2018-12-08"], ["Due", "2019-01-06"]]} />
 </Playground>
 
-## Properties
+## Props
 
 <Props of={DescriptionList} />
+
+---
