--- a/packages/components/src/Icon/Icon.mdx
+++ b/packages/components/src/Icon/Icon.mdx
@@ -25,13 +25,15 @@ Use icons as intended. Provided icons have a specific, meaning. To avoid
 confusing users, it’s essential that each image be used in accordance with its
 meaning and recommended usage.
 
-## Simple Example
+```ts
+import { Icon } from "@jobber/components/Icon";
+```
 
 <Playground>
   <Icon name="address" />
 </Playground>
 
-## Properties
+## Props
 
 <Props of={Icon} />
 
