--- a/packages/components/src/Menu/Menu.mdx
+++ b/packages/components/src/Menu/Menu.mdx
@@ -18,8 +18,6 @@ A toggleable menu that holds a list of actions. Where `InputSelect` is used to
 select an item from a list `Menu` is used to display a dismissible menu of
 actions the user can preform.
 
-## Simple Example
-
 ```ts
 import { Menu } from "@jobber/components/Menu";
 ```
@@ -62,6 +60,12 @@ import { Menu } from "@jobber/components/Menu";
 
 </Playground>
 
+## Props
+
+<Props of={Menu} />
+
+---
+
 ## Custom Activator
 
 <Playground>
@@ -102,7 +106,3 @@ import { Menu } from "@jobber/components/Menu";
   />
 
 </Playground>
-
-## Menu Properties
-
-<Props of={Menu} />
