--- a/packages/components/src/Table/Table.mdx
+++ b/packages/components/src/Table/Table.mdx
@@ -27,7 +27,9 @@ table.
 
 Multiple [Cell types](#cell-types) are provided for common formats.
 
-## Simple Example
+```ts
+import { Table, Header, Footer, Row, Cell } from "@jobber/components/Modal";
+```
 
 <Playground>
   <Table>
@@ -64,9 +66,11 @@ Multiple [Cell types](#cell-types) are provided for common formats.
   </Table>
 </Playground>
 
-## Properties
+## Props
 
-Most table components do not currently accept options.
+Table components do not currently accept options.
+
+---
 
 ## Cell Types
 
