--- a/packages/components/src/Tooltip/Tooltip.mdx
+++ b/packages/components/src/Tooltip/Tooltip.mdx
@@ -17,12 +17,18 @@ import { Card } from "../Card";
 Tooltips are extra information that briefly explain the function of a UI
 element.
 
+```ts
+import { Tooltip } from "@jobber/components/Tooltip";
+```
+
 <Playground>
   <Tooltip message="'tis a button">
     <Button label="Hover On Me" />
   </Tooltip>
 </Playground>
 
-## Tooltip Properties
+## Props
 
 <Props of={Tooltip} />
+
+---
