mention the component proposal

--- a/docs/guides/create-basic-component.mdx
+++ b/docs/guides/create-basic-component.mdx
@@ -51,7 +51,7 @@ Once that's done, it should tell you where the files got added.
 
 ```sh
 ? Component Name: AmountCounter
-✔  +! 4 files added
+✔  +! 5 files added
  -> /packages/components/src/AmountCounter/index.ts
  -> /packages/components/src/AmountCounter/AmountCounter.css
  -> /packages/components/src/AmountCounter/AmountCounter.mdx
@@ -89,6 +89,11 @@ This makes it easier to write the code because we now have an idea on what the
 HTML elements and types of props the component could take. We'll ignore the card
 for now as components should be useable on its own anywhere and a card would
 restrict the overall re-usability of this component.
+
+Alternatively, you can also create a
+[proposal doc](https://github.com/GetJobber/atlantis/blob/master/docs/proposals/TEMPLATE.md)
+to help better understand what you're building. If you just wanna see how to
+build one first, then off we go!
 
 ### Time to write some code
 
