Change to `## Props`

--- a/packages/components/src/Emphasis/Emphasis.mdx
+++ b/packages/components/src/Emphasis/Emphasis.mdx
@@ -25,7 +25,7 @@ import { Emphasis } from "@jobber/components/Emphasis";
   </Text>
 </Playground>
 
-## Emphasis Properties
+## Props
 
 <Props of={Emphasis} />
 
