Change to `## Props`

--- a/packages/components/src/InputNumber/InputNumber.mdx
+++ b/packages/components/src/InputNumber/InputNumber.mdx
@@ -24,7 +24,7 @@ import { InputNumber } from "@jobber/components/InputNumber";
   <InputNumber defaultValue={7} max={11} min={0} placeholder="Volume" />
 </Playground>
 
-## Properties
+## Props
 
 <Props of={InputNumber} />
 
