--- a/plop/templates/component/{{name}}.mdx
+++ b/plop/templates/component/{{name}}.mdx
@@ -14,18 +14,31 @@ import { {{name}} } from ".";
 
 Write a description about what {{ name }} component is trying to achieve.
 
+```ts
+import { {{ name }} } from "@jobber/components/{{ name }}";
+```
+
 <Playground>
   <{{ name }} text="Bob" />
-</Playground>
-
-## Loud
-
-Write a short description about `loud` prop.
-
-<Playground>
-  <{{ name }} text="Fred" loud={true} />
 </Playground>
 
 ## Props
 
 <Props of={ {{ name }} } />
+
+---
+
+<!--
+  It is not necessary to provide an example of each prop. Use usage examples to
+  highlight key features of a component or particular considerations.
+
+  See `Button.mdx` for a good example of this.
+-->
+
+## Loud
+
+Use `loud` to indicate that a component is yelling.
+
+<Playground>
+  <{{ name }} text="Fred" loud={true} />
+</Playground>
