fix: Unified media queries y'all (#129)
* use postcss prest env to handle global media queries

* add custom media breakpoints

* simplify break points to go small medium large

* adjust modal padding on handheld breakpoints

* use corect syntax on handheld breakpoint

* slighly adjust extravagant, jumbo, and  largest font size on handhelds

* mark heading and modal responsive

* pick only what we need

* Revert "pick only what we need"

This reverts commit 8a81ae00d0f714fc8a9501209448da30ef0d6b40.

--- a/packages/components/src/Heading/Heading.mdx
+++ b/packages/components/src/Heading/Heading.mdx
@@ -8,7 +8,7 @@ import { Heading } from ".";
 
 # Heading
 
-<ComponentStatus stage="ready" responsive="partial" accessible="yes" />
+<ComponentStatus stage="ready" responsive="yes" accessible="yes" />
 
 Headings are used as the titles of each major section of a page in the
 interface. Reserved for short, important text or numbers.
