--- a/packages/components/src/Icon/Icon.mdx
+++ b/packages/components/src/Icon/Icon.mdx
@@ -229,6 +229,7 @@ import { Icon } from "@jobber/components/Icon";
 | <Icon name="sun" />        | `sun`        |
 | <Icon name="sync" />       | `sync`       |
 | <Icon name="thumbsUp" />   | `thumbsUp`   |
+| <Icon name="xero" />       | `xero`       |
 
 ## Legacy
 
